# tempeh-engine

./: ,clang-format  .gitignore  .gitmodules  BUILDING.MD  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  Cargo.toml  Macros.cmake  README.md  THIRD-PARTY.md  wasm-build.bat
editor/: CMakeLists.txt
editor/src/: main.cpp
editor/src/core/: application.cpp  application.hpp  projects.cpp  projects.hpp
editor/src/event/: event.hpp
editor/src/filesystem/: filetree.cpp  filetree.hpp
editor/src/gui/: panel.hpp  window_menubar_panel.hpp
editor/src/gui/panels/: scene_panel.cpp  scene_panel.hpp  window_menubar_panel.cpp
editor/src/gui/scene/: project_selection_scene.cpp  project_selection_scene.hpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
editor/src/renderer/: camera.hpp  glfw_metal_util.hpp  glfw_metal_util.mm  gui.hpp  gui_imgui_renderer.cpp  gui_imgui_renderer.hpp  gui_renderer.hpp  render_context.cpp  render_context.hpp  renderer.cpp  renderer.hpp
editor/src/renderer/gui/: imgui_renderer.cpp  imgui_renderer.hpp  renderer.hpp
editor/src/renderer/scene/: editor_camera.hpp
editor/src/window/: input_manager.hpp  keycode_glfw.hpp  window.hpp  window_glfw.cpp  window_glfw.hpp
engine/core/: CMakeLists.txt
engine/core/include/tempeh/: application.hpp  timestep.hpp
engine/core/include/tempeh/event/: dispatcher.hpp  event.hpp  input_manager.hpp  key_code.hpp
engine/core/include/tempeh/event/kind/: keyboard.hpp  mouse.hpp  window.hpp
engine/core/include/tempeh/gpu/: command_list.hpp  device.hpp  instance.hpp  pipeline.hpp  resource.hpp  surface.hpp  swapchain.hpp  types.hpp
engine/core/include/tempeh/gpu/detail/: command_list_impl.hpp  command_pool.hpp  resource_impl.hpp  surface_impl.hpp  wrapper.hpp
engine/core/include/tempeh/gpu/unit_test/: helpers.hpp
engine/core/include/tempeh/gpu/vk/: device.hpp  instance.hpp  surface.hpp  vk.hpp
engine/core/include/tempeh/gpu/wgpu/: device.hpp  instance.hpp  surface.hpp
engine/core/include/tempeh/input/: dispatcher.hpp  event.hpp  input_manager.hpp  key_code.hpp
engine/core/include/tempeh/io/: basic.hpp  file.hpp
engine/core/include/tempeh/renderer/: camera.hpp  orthogonal_camera.hpp  perspective_camera.hpp  render_context.hpp  renderer.hpp
engine/core/include/tempeh/renderer/backend/: backend.hpp  framebuffer.hpp  instance.hpp  texture.hpp  uniform_buffer.hpp
engine/core/include/tempeh/scripting/: Mono.hpp  mono.hpp
engine/core/include/tempeh/window/: Window.hpp  key_code_glfw.hpp  util.hpp  window.hpp  window_android.hpp  window_glfw.hpp
engine/core/src/: application.cpp
engine/core/src/event/: input_manager.cpp  key_code_glfw.hpp
engine/core/src/gpu/: commands.hpp  device.cpp  device_priv.hpp  instance.cpp  resource.cpp  surface.cpp  validator.cpp  validator.hpp
engine/core/src/gpu/unit_test/: helpers.cpp
engine/core/src/gpu/vk/: backend_vk.hpp  command_context_vk.cpp  command_context_vk.hpp  command_list_vk.cpp  command_queue_vk.cpp  command_queue_vk.hpp  command_state_vk.cpp  command_state_vk.hpp  conv_table_vk.hpp  device.cpp  device_vk.cpp  device_vk.hpp  instance.cpp  pipeline_layout_cache_vk.cpp  pipeline_layout_cache_vk.hpp  pipeline_vk.cpp  pipeline_vk.hpp  resource_vk.cpp  resource_vk.hpp  surface.cpp  surface_vk.cpp  surface_vk.hpp  swapchain_vk.cpp  swapchain_vk.hpp  template_descriptors_vk.hpp  transition_barrier_vk.cpp  transition_barrier_vk.hpp  vk.hpp  vma_stub.cpp  volk_stub.cpp
engine/core/src/gpu/wgpu/: device.cpp  instance.cpp
engine/core/src/input/: input_manager.cpp
engine/core/src/io/: basic.cpp  file.cpp
engine/core/src/renderer/: orthogonal_camera.cpp  perspective_camera.cpp  render_context.cpp  renderer.cpp
engine/core/src/scripting/: Mono.cpp  mono.cpp
engine/core/src/window/: window.cpp  window_android.cpp  window_glfw.cpp  window_glfw.hpp
engine/gpu/: CMakeLists.txt
engine/gpu/include/tempeh/gpu/: command_list.hpp  device.hpp  instance.hpp  resource.hpp  surface.hpp  types.hpp
engine/gpu/include/tempeh/gpu/detail/: command_list_impl.hpp  command_pool.hpp  device_impl.hpp  resource_impl.hpp  (+1 more)
engine/gpu/src/gpu/: command_list.cpp  device.cpp  instance.cpp  resource.cpp
engine/gpu/src/gpu/vk/: command_list_vk.hpp  device_vk.cpp  device_vk.hpp  vk.hpp  volk_stub.cpp
engine/telemetry/: CMakeLists.txt
engine/telemetry/include/tempeh/: telemetry.hpp
engine/telemetry/src/: telemetry.cpp
examples/hello-world/: Cargo.toml
examples/hello-world/src/: lib.rs  main.rs
platform/android/bridge/: CMakeLists.txt
platform/android/bridge/src/: bridge.cpp
tempeh-editor/: Cargo.toml  README.md
tempeh-editor/src/: app.rs  file.rs  logger.rs  main.rs  message.rs  project.rs  renderer.rs  scene.rs  toolchain.rs  trace.rs
tempeh-editor/src/misc/: clipboard.rs
tempeh-editor/src/ui/: export_setup.rs  filetree.rs  mod.rs  settings.rs
tempeh-engine/tempeh-core/: Cargo.toml
tempeh-engine/tempeh-core/codegen/: Cargo.toml
tempeh-engine/tempeh-core/codegen/src/: lib.rs
tempeh-engine/tempeh-core/src/: app.rs  game.rs  lib.rs  plugins.rs
tempeh-engine/tempeh-ecs/: Cargo.toml
tempeh-engine/tempeh-ecs/codegen/: Cargo.toml
tempeh-engine/tempeh-ecs/codegen/src/: lib.rs
tempeh-engine/tempeh-ecs/src/: lib.rs
tempeh-engine/tempeh-log/: Cargo.toml
tempeh-engine/tempeh-log/src/: lib.rs
tempeh-engine/tempeh-renderer/: Cargo.toml  build.rs
tempeh-engine/tempeh-renderer/src/: camera.rs  command_encoder.rs  component_system.rs  lib.rs  mini_block.rs  plugins.rs  renderer.rs  sprite.rs  state.rs  texture.rs  uniform.rs
tempeh-engine/tempeh-renderer/src/shaders/: test.frag  test.vert
tempeh-engine/tempeh-window-winit/: Cargo.toml
tempeh-engine/tempeh-window-winit/src/: event.rs  lib.rs  mini_block.rs
test/: CMakeLists.txt
test/assets/: CMakeLists.txt
test/assets/shaders/: tri.fs  tri.vs
test/common/container/: test_static_vector.cpp
test/core/: gpu_test_base.hpp  gpu_vulkan.cpp  main.cpp
test/core/common/collections/: capped_vector.cpp
test/editor/: filesystem.cpp
test/vulkan_backend/: CMakeLists.txt  main.cpp
(+106 files in other folders)
