[package]
name = "sample"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[[bin]]
name = "sample"
path = "src/main.rs"

[lib]
name = "sample"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[workspace]
members = ["tempeh-engine/*"]

[dependencies]
tempeh-core = { version = "0.1.0", path = "tempeh-engine/tempeh-core" }
tempeh-renderer = { version = "0.1.0", path = "tempeh-engine/tempeh-renderer" }
tempeh-window-winit = { version = "0.1.0", path = "tempeh-engine/tempeh-window-winit" }
tempeh-window = { version = "0.1.0", path = "tempeh-engine/tempeh-window" }
log = "0.4.14"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10.1"
ndk-glue = { version = "0.3.0", features = ["logger"] }

[target.'cfg(all(not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
env_logger = "0.9.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.50"
console_log = "0.2.0"
legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion = "0.4.0"
