[package]
name = "sample"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "tempeh-engine/tempeh-core",
    "tempeh-engine/tempeh-core-component",
    "tempeh-engine/tempeh-engine",
    "tempeh-engine/tempeh-window-winit",
    "tempeh-engine/tempeh-window",
    "tempeh-engine/tempeh-renderer",
    "tempeh-engine/tempeh-ecs",
    "tempeh-engine/tempeh-math",
    "tempeh-engine/tempeh-filesystem",
    "tempeh-editor"
]

[dependencies]
tempeh-core = { version = "0.1.0", path = "tempeh-engine/tempeh-core" }
tempeh-core-component = { version = "0.1.0", path = "tempeh-engine/tempeh-core-component" }
tempeh-renderer = { version = "0.1.0", path = "tempeh-engine/tempeh-renderer" }
tempeh-math = { version = "0.1.0", path = "tempeh-engine/tempeh-math" }
tempeh-ecs = { version = "0.1.0", path = "tempeh-engine/tempeh-ecs" }
tempeh-window-winit = { version = "0.1.0", path = "tempeh-engine/tempeh-window-winit" }
tempeh-window = { version = "0.1.0", path = "tempeh-engine/tempeh-window" }
tempeh-log = { version = "0.1.0", path = "tempeh-engine/tempeh-log" }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.3.0", features = ["logger"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.50"

[package.metadata.android]
build_targets = ["aarch64-linux-android"] #"armv7-linux-androideabi", , "x86_64-linux-android"
assets = "assets"

[[example]]
name = "sample"
path = "examples/sample.rs"

[[example]]
name = "sample_android"
path = "examples/sample.rs"
crate-type = ["cdylib"]
