[package]
name = "tempeh-editor"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[dependencies]
wgpu = { version = "0.9.0", features = ["webgl"] }
imgui-wgpu = "0.16.0"
imgui = "0.7.0"
pollster = "0.2.4"
winit = "0.24.0" # TODO bump version
log = "0.4.14"
lazy_static = "1.4.0"
env_logger = "0.9.0"
simplelog = "0.10.0"
imgui-winit-support = "0.7.0"
