[package]
name = "tempeh-editor"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[dependencies]
wgpu = "0.10.1"
imgui-wgpu = "0.17.0"
imgui = "0.7.0"
pollster = "0.2.4"
winit = "0.25.0"
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
#futures = "0.3.17"
log = "0.4.14"
lazy_static = "1.4.0"
env_logger = "0.9.0"
simplelog = "0.10.0"
imgui-winit-support = { version = "0.7.0", default-features = false, features = ["winit-25"] }
webbrowser = "0.5"
once_cell = "1.8.0"
clipboard = "0.5.0"
ron = "0.6.4"
libloading = "0.7.0"
raw-window-handle = "0.3.3"
