[package]
name = "tempeh-editor"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[dependencies]
wgpu = "0.12.0"
imgui-wgpu = "0.19"
imgui = "0.8"
pollster = "0.2"
winit = "0.26"
async-std = { version = "1.12", features = ["unstable", "attributes"] }
log = "0.4"
lazy_static = "1.4"
env_logger = "0.9"
simplelog = "0.12"
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }
webbrowser = "0.7"
once_cell = "1.12"
clipboard = "0.5"
ron = "0.7"
libloading = "0.7"
raw-window-handle = "0.4"
