[package]
name = "tempeh-core"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.28.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
log = "0.4.14"
rapier2d = "0.10.1"
tempeh-renderer = { version = "0.1.0", path = "../tempeh-renderer" }
#rodio = { version = "0.14.0", default-features = false }
wgpu = "0.9.0"

#[target.'cfg(target_os = "android")'.dependencies]
#ndk-glue = { version = "0.3.0", features = ["logger"] }
#ndk = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion = "0.4.0"

[package.metadata.android]
build_targets = ["aarch64-linux-android"] #"armv7-linux-androideabi", , "x86_64-linux-android"
assets = "assets"
