[package]
name = "tempeh-ecs"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[dependencies]
legion_codegen = { path = "codegen", version = "0.4.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion = { version = "0.4.0", default-features = false, features = ["parallel", "serialize", "crossbeam-events"] }
