[package]
name = "tempeh-log"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10.1"
ndk-glue = { version = "0.3.0", features = ["logger"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2.0"

[target.'cfg(all(not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
env_logger = "0.9.0"
