[package]
name = "tempeh-renderer"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.10.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
log = "0.4"
tempeh-core-component = { version = "0.1.0", path = "../tempeh-core-component" }
tempeh-window = { version = "0.1.0", path = "../tempeh-window" }
tempeh-ecs = { version = "0.1.0", path = "../tempeh-ecs" }
tempeh-core = { version = "0.1.0", path = "../tempeh-core" }
tempeh-math = { version = "0.1.0", path = "../tempeh-math" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.12.0", features = ["webgl", "spirv"] }
web-sys = "0.3.53"
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "0.12.0", features = ["spirv"] }
image = "0.24.2"

[build-dependencies]
shaderc = "0.8.0"
glob = "0.3.0"
