[package]
name = "tempeh-window-winit"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.28.0"
wgpu = "0.9.0"
async-std = "1.9.0"
log = "0.4.14"
tempeh-window = { version = "0.1.0", path = "../tempeh-window" }
tempeh-renderer = { version = "0.1.0", path = "../tempeh-renderer" }
tempeh-core = { version = "0.1.0", path = "../tempeh-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = { version = "0.25.0", features = ["web-sys"] }
legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.25.0"
legion = "0.4.0"
